--- a/index.html
+++ b/index.html
@@ -11,6 +11,35 @@
     <script defer src="js/ie.js"></script>
 </head>
 <body>
+    <header>
+        <div class="inner">
+            <h1><a href="#">COMPANY</a></h1>
 
+            <ul id="gnb">
+                <li><a href="#">DEPARTMENT</a></li>
+                <li><a href="#">GALLERY</a></li>
+                <li><a href="#">YOUTUBE</a></li>
+                <li><a href="#">COMMUNITY</a></li>
+                <li><a href="#">LOCATION</a></li>
+            </ul>
+
+            <ul class="util">
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Help</a></li>
+                <li><a href="#">Login</a></li>
+                <li><a href="#">Join</a></li>
+                <li><a href="#">Sitemap</a></li>
+            </ul>
+        </div>
+    </header>
+
+    <figure>
+        <video src="img/visual.mp4" autoplay muted loop></video>
+        <div class="inner">
+            <h1>INNOVATION</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus aspernatur facere minus reprehenderit non unde cumque, iste fugiat ipsum rerum.</p>
+            <a href="#">view detail</a>
+        </div>
+    </figure>
 </body>
 </html>
