figure, section, footer 완성

--- a/index.html
+++ b/index.html
@@ -37,9 +37,73 @@
         <video src="img/visual.mp4" autoplay muted loop></video>
         <div class="inner">
             <h1>INNOVATION</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus aspernatur facere minus reprehenderit non unde cumque, iste fugiat ipsum rerum.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                <br>Numquam sequi, voluptate expedita obcaecati dicta tempore libero minus?</p>
             <a href="#">view detail</a>
         </div>
     </figure>
+
+    <section>
+        <div class="inner">
+            <h1>RECENT NEWS</h1>
+            <div class="wrap">
+                <article>
+                    <div class="pic">
+                        <img src="img/news1.jpg" alt="1번째 콘텐츠 이미지">
+                    </div>
+                    <h2><a href="#">Lorem ipsum dolor sit.</a></h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas suscipit facere sit eum labore reprehenderit?</p>
+                </article>
+
+                <article>
+                    <div class="pic">
+                        <img src="img/news2.jpg" alt="2번째 콘텐츠 이미지">
+                    </div>
+                    <h2><a href="#">Lorem ipsum dolor sit.</a></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, labore. Quod consectetur asperiores illo sunt magnam repudiandae!</p>
+                </article>
+
+                <article>
+                    <div class="pic">
+                        <img src="img/news3.jpg" alt="3번째 콘텐츠 이미지">
+                    </div>
+                    <h2><a href="#">Lorem ipsum dolor sit.</a></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium doloribus fuga aliquid voluptas quis.</p>
+                </article>
+
+                <article>
+                    <div class="pic">
+                        <img src="img/news4.jpg" alt="4번째 콘텐츠 이미지">
+                    </div>
+                    <h2><a href="#">Lorem ipsum dolor sit.</a></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias sapiente repellat itaque sint nisi quia qui.</p>
+                </article>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="inner">
+            <div class="upper">
+                <h1>COMPANY</h1>
+                <ul>
+                    <li><a href="#">Policy</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Family Site</a></li>
+                    <li><a href="#">Sitemap</a></li>
+                </ul>
+            </div>
+
+            <div class="lower">
+                <address>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, quidem.<br>
+                    TEL : 031-123-4567 C.P : 010-1234-5678
+                </address>
+                <p>
+                    2022 COMPANY &copy; copyright all right reserved.
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
